--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.16.9",
     "bootstrap": "^4.6.0",
     "next": "11.0.1",
+    "popper.js": "^1.16.1",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
